--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <script type="module" src="/src/listeners.js"></script>
+    <!-- <script type="module" src="/src/listeners.js"></script> -->
   </body>
 </html>
