--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="google" content="nositelinkssearchbox">
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <title>Amazon.com en espanol. Gasta menos. Sonríe más.</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   </head>
   <body>
     <div id="root"></div>
